--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
           <p>The market leader in real estate since 2003. Awards Real Estate <br> Company, 2010, 2011, 2013. More than 200 satisfied customers<br> premium segment. We focus only on new buildings and high-level<br> doskanalno know this area better than other specialists. <br>Working directly with developers - so have more useful information about the profitable deals.<br></p>
           <br>
           <p><strong>Will never be late! <br> Guaranteed secure transaction - 100%</strong></p>
+          </div>
         </article>
       </section>
       <section class="section">
