--- a/index.html
+++ b/index.html
@@ -66,22 +66,97 @@
             <img class="photos__img" src="images/photos/1.jpg" alt="maymi-view1">
             <img class="photos__img" src="images/photos/2.jpg" alt="maymi-view2">
           </div>
-          <p>Marina Palms /<a href="#">North Miami Beach, FL 33162</a></p>
+          <p class="gallery__caption">
+            <a class="photos__link" href="#">Marina Palms</a> / North Miami Beach, FL 33162</p>
           <div class="photos">
             <img class="photos__img" src="images/photos/3.jpg" alt="maymi-view3">
             <img class="photos__img" src="images/photos/4.jpg" alt="maymi-view4">
           </div>
-          <p>Edition Residens /<a href="#">Miami Beach, FL 33139</a></p>
+          <p class="gallery__caption">
+            <a class="photos__link" href="#">Edition Residens</a> / Miami Beach, FL 33139</p>
           <div class="photos photos-wide-right">
             <img class="photos__img" src="images/photos/5.jpg" alt="maymi-view5">
             <img class="photos__img" src="images/photos/6.jpg" alt="maymi-view6">
           </div>
-          <p>Faena House /<a href="#">Miami Beach, FL 33140</a></p>
-
+          <p class="gallery__caption">
+            <a class="photos__link" href="#">Faena House</a> / Miami Beach, FL 33140</p>
           <button class="button gallery__button">View all</button>
         </div>
       </section>
+      <section class="section">
+        <h2 class="section__heading heading">Consultation
+          <span class="heading__crown"></span>
+        </h2>
+        <div class="consultation">
+          <div class="consultation__text">
+            <h3 class="consultation__heading">How long have you do <br> yourself a gift?</h3>
+            <p>The procedural change mezzo forte starts izoritmichesky pickup at these moments stop LA Mazel and VA Tsukkerman in his "Analysis of musical works." Pointillism, which originated in the music of the early twentieth century, microforms, found a distant historical.</p>
+          </div>
+          <form class="form consultation__form" action="#">
+            <label class="form__item">
+              <input class="input form__input" type="text" name="name" placeholder="Name">
+            </label>
+            <label class="form__item">
+              <input class="input form__input" type="phone" name="phone" placeholder="Phone">
+            </label>
+            <label class="form__item">
+              <input class="input form__input" type="email" name="email" placeholder="Email">
+            </label>
+            <button class="button form__button">Consultation</button>
+          </form>
+        </div>
+      </section>
+      <section class="section">
+        <h2 class="section__heading heading">Testimonials
+          <span class="heading__crown"></span>
+        </h2>
+        <div class="testimonials">
+          <div class="person">
+            <img class="person__photo" src=".//images/people/1.jpg" alt="Leslie Mckinney">
+            <h3 class="person__name">Leslie Mckinney</h3>
+            <p class="person__position">CEO</p>
+            <p class="person__text">Nice work, Certificates National Association of Realtors (USA)</p>
+          </div>
+          <div class="person">
+            <img class="person__photo" src=".//images/people/2.jpg" alt="Scarlett Hawkins">
+            <h3 class="person__name">Scarlett Hawkins</h3>
+            <p class="person__position">Senior Vice President</p>
+            <p class="person__text">My soul is illuminated by an unearthly joy, as these beautiful spring morning, which I enjoy with all my heart</p>
+          </div>
+          <div class="person">
+            <img class="person__photo" src=".//images/people/3.jpg" alt="Max Henry">
+            <h3 class="person__name">Max Henry</h3>
+            <p class="person__position">Chief Design Officer</p>
+            <p class="person__text">When my lovely valley of steam rises and half-day sun is above an impermeable</p>
+          </div>
+        </div>
+      </section>
+      <section class="section">
+        <h2 class="section__heading heading">Contact us
+          <span class="heading__crown"></span>
+        </h2>
+        <div class="contact">
+          <div class="contact__info">
+
+          </div>
+          <form class="form contact__form" action="#">
+            <label class="form__item">
+              <input class="input form__input" type="text" name="name" placeholder="Name">
+            </label>
+            <label class="form__item">
+              <input class="input form__input" type="email" name="email" placeholder="Email">
+            </label>
+            <label class="form__item">
+              <textarea class="input input__textarea form__input" placeholder="Message"></textarea>
+            </label>
+            <button class="button contact__button form__button">Consultation</button>
+          </form>
+        </div>
+      </section>
     </main>
+    <footer class="footer">
+      <div class="logo footer__logo"></div>
+    </footer>
 
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
