--- a/index.html
+++ b/index.html
@@ -137,7 +137,20 @@
         </h2>
         <div class="contact">
           <div class="contact__info">
-
+            <ul class="contact__list">
+              <li class="contact__item">Phone</li>
+              <li class="contact__item">+1 234 5555-55-55</li>
+              <li class="contact__item"></li>
+              <li class="contact__item">Email</li>
+              <li class="contact__item">hello@miami.com</li>
+            </ul>
+            <ul class="contact__list">
+              <li class="contact__item">Address</li>
+              <li class="contact__item">400 first ave. n.</li>
+              <li class="contact__item">suite 700</li>
+              <li class="contact__item">Minneapolis, MN</li>
+              <li class="contact__item">55401</li>
+            </ul>
           </div>
           <form class="form contact__form" action="#">
             <label class="form__item">
