--- a/index.html
+++ b/index.html
@@ -136,21 +136,17 @@
           <span class="heading__crown"></span>
         </h2>
         <div class="contact">
-          <div class="contact__info">
-            <ul class="contact__list">
-              <li class="contact__item">Phone</li>
-              <li class="contact__item">+1 234 5555-55-55</li>
-              <li class="contact__item"></li>
-              <li class="contact__item">Email</li>
-              <li class="contact__item">hello@miami.com</li>
-            </ul>
-            <ul class="contact__list">
-              <li class="contact__item">Address</li>
-              <li class="contact__item">400 first ave. n.</li>
-              <li class="contact__item">suite 700</li>
-              <li class="contact__item">Minneapolis, MN</li>
-              <li class="contact__item">55401</li>
-            </ul>
+          <div class="contact__infodata infodata">
+            <div class="infodata__contacts">
+              <div class="infodata__item">Phone</div>
+              <div class="infodata__text">+1 234 5555-55-55</div>
+              <div class="infodata__item">Email</div>
+              <div class="infodata__text">hello@miami.com</div>
+            </div>
+            <div class="infodata__address">
+              <div class="infodata__item">Address</div>
+              <div class="infodata__text">400 first ave. n. <br> suite 700 <br> Minneapolis, MN <br>55401</div>
+            </div>
           </div>
           <form class="form contact__form" action="#">
             <label class="form__item">
