--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
       <div class="header-wrapper">
       <div class="header__top">
-        <div class="header__phone">+1 234 555-55-55</div>
+        <a class="header__phone phone__link" href="tel:123-456-7890">123-456-7890</a>
         <div class="logo header__logo"></div>
         <div class="header__action">
           <a class="header__link" href="#">call to order</a>
@@ -19,28 +19,29 @@
       </div>
       <h1 class="header__title">Miami<br>
         Condo Kings</h1>
-      <nav class="nav header__nav">
+      <nav class="nav">
         <ul class="nav__list">
           <li class="nav__item nav__item--active">Home</li>
           <li class="nav__item">
             <a class="nav__link" href="#">About us</a>
           </li>
           <li class="nav__item">
-            <a class="nav__link" href="#">gallery</a>
+            <a class="nav__link" href="#gallery">gallery</a>
           </li>
           <li class="nav__item">
-            <a class="nav__link" href="#">consultation</a>
+            <a class="nav__link" href="#consultation">consultation</a>
           </li>
           <li class="nav__item">
-            <a class="nav__link" href="#">testimonials</a>
+            <a class="nav__link" href="#testimonials">testimonials</a>
           </li>
           <li class="nav__item">
-            <a class="nav__link" href="#">Contacts</a>
+            <a class="nav__link" href="#contacts">Contacts</a>
           </li>
         </ul>
       </nav>
     </div>
     </header>
+
     <main>
       <section class="section">
         <article class="info">
@@ -58,33 +59,33 @@
         </article>
       </section>
       <section class="section">
-        <h2 class="section__heading heading">Gallery
+        <h2 class="section__heading heading" id="gallery">Gallery
           <span class="heading__crown"></span>
         </h2>
         <div class="gallery">
           <div class="photos photos-wide-left">
-            <img class="photos__img" src="images/photos/1.jpg" alt="maymi-view1">
-            <img class="photos__img" src="images/photos/2.jpg" alt="maymi-view2">
+            <img class="photos__img" src="images/photos/1.jpg" alt="residence Marina Palms">
+            <img class="photos__img" src="images/photos/2.jpg" alt="Miami beach">
           </div>
           <p class="gallery__caption">
             <a class="photos__link" href="#">Marina Palms</a> / North Miami Beach, FL 33162</p>
           <div class="photos">
-            <img class="photos__img" src="images/photos/3.jpg" alt="maymi-view3">
-            <img class="photos__img" src="images/photos/4.jpg" alt="maymi-view4">
+            <img class="photos__img" src="images/photos/3.jpg" alt="Edition Miami Residens">
+            <img class="photos__img" src="images/photos/4.jpg" alt="main house Miami Residens">
           </div>
           <p class="gallery__caption">
             <a class="photos__link" href="#">Edition Residens</a> / Miami Beach, FL 33139</p>
           <div class="photos photos-wide-right">
-            <img class="photos__img" src="images/photos/5.jpg" alt="maymi-view5">
-            <img class="photos__img" src="images/photos/6.jpg" alt="maymi-view6">
+            <img class="photos__img" src="images/photos/5.jpg" alt="car at Miami">
+            <img class="photos__img" src="images/photos/6.jpg" alt="ocean from Miami beach">
           </div>
           <p class="gallery__caption">
             <a class="photos__link" href="#">Faena House</a> / Miami Beach, FL 33140</p>
-          <button class="button gallery__button">View all</button>
+          <button class="button gallery__button" type="submit">View all</button>
         </div>
       </section>
       <section class="section">
-        <h2 class="section__heading heading">Consultation
+        <h2 class="section__heading heading" id="consultation">Consultation
           <span class="heading__crown"></span>
         </h2>
         <div class="consultation">
@@ -92,77 +93,78 @@
             <h3 class="consultation__heading">How long have you do <br> yourself a gift?</h3>
             <p>The procedural change mezzo forte starts izoritmichesky pickup at these moments stop LA Mazel and VA Tsukkerman in his "Analysis of musical works." Pointillism, which originated in the music of the early twentieth century, microforms, found a distant historical.</p>
           </div>
-          <form class="form consultation__form" action="#">
+          <form class="form consultation__form" action="#" method="GET">
             <label class="form__item">
-              <input class="input form__input" type="text" name="name" placeholder="Name">
+              <input class="input form__input" required type="text" maxlength="30" name="name" placeholder="Name">
             </label>
             <label class="form__item">
-              <input class="input form__input" type="phone" name="phone" placeholder="Phone">
+              <input class="input form__input" required type="phone" name="phone" placeholder="Phone">
             </label>
             <label class="form__item">
-              <input class="input form__input" type="email" name="email" placeholder="Email">
+              <input class="input form__input" required type="email" name="email" placeholder="Email">
             </label>
-            <button class="button form__button">Consultation</button>
+            <button class="button form__button" type="submit">Consultation</button>
           </form>
         </div>
       </section>
       <section class="section">
-        <h2 class="section__heading heading">Testimonials
+        <h2 class="section__heading heading" id="testimonials">Testimonials
           <span class="heading__crown"></span>
         </h2>
         <div class="testimonials">
           <div class="person">
             <img class="person__photo" src=".//images/people/1.jpg" alt="Leslie Mckinney">
             <h3 class="person__name">Leslie Mckinney</h3>
-            <p class="person__position">CEO</p>
+            <span class="person__position">CEO</span>
             <p class="person__text">Nice work, Certificates National Association of Realtors (USA)</p>
           </div>
           <div class="person">
             <img class="person__photo" src=".//images/people/2.jpg" alt="Scarlett Hawkins">
             <h3 class="person__name">Scarlett Hawkins</h3>
-            <p class="person__position">Senior Vice President</p>
+            <span class="person__position">Senior Vice President</span>
             <p class="person__text">My soul is illuminated by an unearthly joy, as these beautiful spring morning, which I enjoy with all my heart</p>
           </div>
           <div class="person">
             <img class="person__photo" src=".//images/people/3.jpg" alt="Max Henry">
             <h3 class="person__name">Max Henry</h3>
-            <p class="person__position">Chief Design Officer</p>
+            <span class="person__position">Chief Design Officer</span>
             <p class="person__text">When my lovely valley of steam rises and half-day sun is above an impermeable</p>
           </div>
         </div>
       </section>
       <section class="section">
-        <h2 class="section__heading heading">Contact us
+        <h2 class="section__heading heading" id="contacts">Contact us
           <span class="heading__crown"></span>
         </h2>
         <div class="contact">
           <div class="contact__infodata infodata">
             <div class="infodata__contacts">
               <div class="infodata__item">Phone</div>
-              <div class="infodata__text">+1 234 5555-55-55</div>
+              <a class="infodata__phone" href="tel:+1 234 5555-55-55">+1 234 5555-55-55</a>
               <div class="infodata__item">Email</div>
-              <div class="infodata__text">hello@miami.com</div>
+              <a class="infodata__email" href="hello@miami.com">hello@miami.com</a>
             </div>
             <div class="infodata__address">
               <div class="infodata__item">Address</div>
-              <div class="infodata__text">400 first ave. n. <br> suite 700 <br> Minneapolis, MN <br>55401</div>
+              <address class="infodata__text">400 first ave. n. <br> suite 700 <br> Minneapolis, MN <br>55401</address>
             </div>
           </div>
-          <form class="form contact__form" action="#">
+          <form class="form contact__form" action="#" method="GET">
             <label class="form__item">
-              <input class="input form__input" type="text" name="name" placeholder="Name">
+              <input class="input form__input" required type="text" maxlength="30" name="name" placeholder="Name">
             </label>
             <label class="form__item">
-              <input class="input form__input" type="email" name="email" placeholder="Email">
+              <input class="input form__input" required type="email" name="email" placeholder="Email">
             </label>
             <label class="form__item">
-              <textarea class="input input__textarea form__input" placeholder="Message"></textarea>
+              <textarea class="input input__textarea form__input" required placeholder="Message"></textarea>
             </label>
-            <button class="button contact__button form__button">Consultation</button>
+            <button class="button contact__button form__button" type="submit">Consultation</button>
           </form>
         </div>
       </section>
     </main>
+
     <footer class="footer">
       <div class="logo footer__logo"></div>
     </footer>
