--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
       <div class="header-wrapper">
       <div class="header__top">
-        <a class="header__phone phone__link" href="tel:123-456-7890">123-456-7890</a>
+        <a class="header__phone phone__link" href="+1 234 555-55-55">+1 234 555-55-55</a>
         <div class="logo header__logo"></div>
         <div class="header__action">
           <a class="header__link" href="#">call to order</a>
