--- a/index.html
+++ b/index.html
@@ -12,18 +12,23 @@
       <div class="header-wrapper">
       <div class="header__top">
         <a class="header__phone phone__link" href="+1 234 555-55-55">+1 234 555-55-55</a>
-        <div class="logo header__logo"></div>
+        <a class="logo header__logo" href="#home"></a>
+        <!-- <div class="logo header__logo"></div> -->
         <div class="header__action">
           <a class="header__link" href="#">call to order</a>
         </div>
       </div>
       <h1 class="header__title">Miami<br>
         Condo Kings</h1>
-      <nav class="nav">
+      <nav class="nav header__nav">
+        <input type="checkbox" id="toggle" class="nav__toggle">
+          <label for="toggle" class="nav__btn">
+            <span class="nav__span"></span>
+          </label>
         <ul class="nav__list">
-          <li class="nav__item nav__item--active">Home</li>
+          <li class="nav__item nav__item--active" id="home">Home</li>
           <li class="nav__item">
-            <a class="nav__link" href="#">About us</a>
+            <a class="nav__link" href="#about-us">About us</a>
           </li>
           <li class="nav__item">
             <a class="nav__link" href="#gallery">gallery</a>
@@ -45,7 +50,7 @@
     <main>
       <section class="section">
         <article class="info">
-          <h2 class="info__title">Miami best <br> Real estate
+          <h2 class="info__title" id="about-us">Miami best <br> Real estate
             <a class="info__link" href="#">here</a>
           </h2>
           <div class="info__text">
@@ -64,8 +69,12 @@
         </h2>
         <div class="gallery">
           <div class="photos photos-wide-left">
-            <img class="photos__img" src="images/photos/1.jpg" alt="residence Marina Palms">
-            <img class="photos__img" src="images/photos/2.jpg" alt="Miami beach">
+            <!-- <div class="image-box"> -->
+              <img class="photos__img" src="images/photos/1.jpg" alt="residence Marina Palms">
+            <!-- </div> -->
+            <!-- <div class="image-box"> -->
+              <img class="photos__img" src="images/photos/2.jpg" alt="Miami beach">
+            <!-- </div> -->
           </div>
           <p class="gallery__caption">
             <a class="photos__link" href="#">Marina Palms</a> / North Miami Beach, FL 33162</p>
@@ -95,13 +104,13 @@
           </div>
           <form class="form consultation__form" action="#" method="GET">
             <label class="form__item">
-              <input class="input form__input" required type="text" maxlength="30" name="name" placeholder="Name">
+              <input class="input form__input" required="" type="text" maxlength="30" name="name" placeholder="Name">
             </label>
             <label class="form__item">
-              <input class="input form__input" required type="phone" name="phone" placeholder="Phone">
+              <input class="input form__input" required="" type="tel" name="phone" placeholder="Phone">
             </label>
             <label class="form__item">
-              <input class="input form__input" required type="email" name="email" placeholder="Email">
+              <input class="input form__input" required="" type="email" maxlength="20" name="email" placeholder="Email">
             </label>
             <button class="button form__button" type="submit">Consultation</button>
           </form>
@@ -140,7 +149,9 @@
           <div class="contact__infodata infodata">
             <div class="infodata__contacts">
               <div class="infodata__item">Phone</div>
-              <a class="infodata__phone" href="tel:+1 234 5555-55-55">+1 234 5555-55-55</a>
+              <a class="infodata__phone"
+              href="tel:+1 234 5555-55-55"
+              pattern="+1-[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}">+1 234 5555-55-55</a>
               <div class="infodata__item">Email</div>
               <a class="infodata__email" href="hello@miami.com">hello@miami.com</a>
             </div>
@@ -151,13 +162,13 @@
           </div>
           <form class="form contact__form" action="#" method="GET">
             <label class="form__item">
-              <input class="input form__input" required type="text" maxlength="30" name="name" placeholder="Name">
+              <input class="input form__input" required="" type="text" maxlength="30" name="name" placeholder="Name">
             </label>
             <label class="form__item">
-              <input class="input form__input" required type="email" name="email" placeholder="Email">
+              <input class="input form__input" required="" type="email" maxlength="20" name="email" placeholder="Email">
             </label>
             <label class="form__item">
-              <textarea class="input input__textarea form__input" required placeholder="Message"></textarea>
+              <textarea class="input input__textarea form__input" required="" placeholder="Message"></textarea>
             </label>
             <button class="button contact__button form__button" type="submit">Consultation</button>
           </form>
